--- a/example/build.gradle
+++ b/example/build.gradle
@@ -16,11 +16,14 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            ndk {
+                abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86' // <- only the supported ones
+            }
+            packagingOptions{
+                doNotStrip '*/mips/*.so'
+                doNotStrip '*/mips64/*.so'
+            }
         }
-    }
-    packagingOptions{
-        doNotStrip '*/mips/*.so'
-        doNotStrip '*/mips64/*.so'
     }
 }
 
