--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -25,11 +25,14 @@ android {
             minifyEnabled false
             shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            ndk {
+                abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86' // <- only the supported ones
+            }
+            packagingOptions{
+                doNotStrip '*/mips/*.so'
+                doNotStrip '*/mips64/*.so'
+            }
         }
-    }
-    packagingOptions{
-        doNotStrip '*/mips/*.so'
-        doNotStrip '*/mips64/*.so'
     }
 }
 
